css - add font-display:fallback for perf reasons

--- a/libraries/libraries/static/scss/fonts/_cca-fonts.scss
+++ b/libraries/libraries/static/scss/fonts/_cca-fonts.scss
@@ -3,17 +3,20 @@
 
 // Brown font face
 @font-face {
+    font-display: fallback;
     font-family: 'Brown';
     src: url('/static/fonts/lineto-brown-regular.woff2') format('woff2'),
         url('/static/fonts/lineto-brown-regular.woff') format('woff');
 }
 @font-face {
+    font-display: fallback;
     font-family: 'Brown';
     src: url('/static/fonts/lineto-brown-bold.woff2') format('woff2'),
         url('/static/fonts/lineto-brown-bold.woff') format('woff');
     font-weight: bold;
 }
 @font-face {
+    font-display: fallback;
     font-family: 'Brown';
     src: url('/static/fonts/lineto-brown-italic.woff2') format('woff2'),
         url('/static/fonts/lineto-brown-italic.woff') format('woff');
