--- a/libraries/libraries/static/scss/fonts/_google-fonts.scss
+++ b/libraries/libraries/static/scss/fonts/_google-fonts.scss
@@ -3,5 +3,6 @@
 // Merriweather is backup for The Serif
 // Raleway is backup for Brown
 // Stardos Stencil is backup for Le Corbusier
+// @TODO we should download & inline this CSS for performance reasons
 @import url('https://fonts.googleapis.com/css?family=Merriweather:300,400,700');
 @import url('https://fonts.googleapis.com/css?family=Stardos Stencil:300,400,700');
