home - preconnect to Summon

--- a/libraries/home/templates/home/home_page.html
+++ b/libraries/home/templates/home/home_page.html
@@ -3,6 +3,7 @@
 {% block body_class %}home{% endblock %}
 
 {% block content %}
+    <link rel="preconnect" href="https://cca.summon.serialssolutions.com">
     {% include "home/home-hero.html" %}
 
     <div class="wrapper">
