exhib - auto-pause youtube videos ref #72
lightgallery needs to identify items as youtube to use
special logic that enables video pausing on navigation
so we remove the data-iframe element which was throwing
LG off

--- a/libraries/exhibitions/templates/components/artwork-embed.html
+++ b/libraries/exhibitions/templates/components/artwork-embed.html
@@ -2,8 +2,8 @@
 
 {% if work.embed_code != '' %}
 <div class="gallery--work js-gallery--work" data-iframe="true"
-    data-src="{{ work.embed_code }}?modestbranding=1&rel=0&showinfo=0&controls=0"
-    data-sub-html=".js-caption" style="width:{{page.column_width}}px;">
+    data-src="{{ work.embed_code }}" data-sub-html=".js-caption"
+    style="width:{{page.column_width}}px;">
     <div class="gallery--work__html">
         {% if work.image %}
             {% include 'components/ytp-btn.html' %}
