--- a/libraries/exhibitions/templates/components/artwork-embed.html
+++ b/libraries/exhibitions/templates/components/artwork-embed.html
@@ -12,12 +12,12 @@
         {% comment %}
         for YouTube we can find a thumbnail, not possible for Vimeo without an API call
         {% endcomment %}
-        {% elif 'https://www.youtube.com/embed/' in work.embed_code %}
+        {% elif 'https://www.youtube.com/watch?v=' in work.embed_code %}
             {% include 'components/ytp-btn.html' %}
-            <img src="https://i3.ytimg.com/vi/{{ work.embed_code | cut:'https://www.youtube.com/embed/' }}/0.jpg" alt="{{ work.title }}">
+            <img src="https://i3.ytimg.com/vi/{{ work.embed_code | cut:'https://www.youtube.com/watch?v=' }}/0.jpg" alt="{{ work.title }}">
 
         {% else %}
-            <iframe class="responsive-embed" width="560" height="315" src="{{ work.embed_code }}?modestbranding=1&rel=0&showinfo=0&controls=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe class="responsive-embed" width="560" height="315" src="{{ work.embed_code }}" frameborder="0" allow="encrypted-media" allowfullscreen></iframe>
         {% endif %}
     </div>
 {% endif %}
