blog - index has a <title> now
minor template change fixes this, title used to be ' | CCA Libraries'

--- a/libraries/libraries/templates/base.html
+++ b/libraries/libraries/templates/base.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>
             {% block title %}
-                {% if self.seo_title %}{{ self.seo_title }}{% else %}{{ self.title }}{% endif %}
+                {% if self.seo_title %}{{ self.seo_title }}{% else %}{{ page.title }}{% endif %}
             {% endblock %}
             {% block title_suffix %}| CCA Libraries{% endblock %}
         </title>
