--- a/libraries/blog/templates/blog/blog_page.html
+++ b/libraries/blog/templates/blog/blog_page.html
@@ -1,4 +1,45 @@
 {% extends "base.html" %}
+{% load libraries_tags wagtailcore_tags wagtailimages_tags %}
+
+{% block schema_org %}
+{% image page.main_image original as main_image %}
+<script type="application/ld+json">
+{
+    "@context": "http://schema.org/",
+    "@type": "BlogPosting",
+	"mainEntityOfPage": {
+	    "@type": "WebPage",
+	    "@id": "{{ request.site.root_url }}{% pageurl page %}"
+	},
+	"name": "{{ page.title }}",
+	"image": [ "{{ request.site.root_url }}{{ main_image.url }}" ],
+	"author": {
+		"@type": "Person",
+		"name": "{{ page.owner.first_name }} {{ page.owner.last_name }}"
+	},
+	"datePublished": "{{ page.first_published_at|date:"c" }}",
+	"dateModified": "{{ page.last_published_at|date:"c" }}",
+    {% if page.body %}
+        {# this is a streamfield #}
+        "description": "{{ page.body|striptags|condense_whitespace|truncatewords_html:200 }}",
+    {% else %}
+        "description": "{{ page.search_description }}",
+    {% endif %}
+    "headline": "{{ page.search_description }}",
+	"license": "https://creativecommons.org/licenses/by/4.0/",
+	"publisher": {
+		"@type": "Organization",
+		"name": "California College of the Arts Libraries",
+		"logo": {
+			"@type": "ImageObject",
+			"height": 140,
+			"url": "https://libraries.cca.edu/static/images/logo.png",
+			"width": 1000
+		}
+	}
+}
+</script>
+{% endblock %}
 
 {% block body_class %}page--blog-page{% endblock %}
 
