--- a/libraries/libraries/templates/base.html
+++ b/libraries/libraries/templates/base.html
@@ -2,7 +2,10 @@
 {% spaceless %}
 <!DOCTYPE html>
 <html class="no-js" lang="en">
-    <head>{% include 'components/head/head.html' %}</head>
+    <head>
+        {% include 'components/head/head.html' %}
+        {% block schema_org %}{% endblock %}
+    </head>
 
     <body class="page js-page {% block body_class %}{% endblock %}">
         {% wagtailuserbar %}
