fix iframe embed sizing on mobile
providing fixed width iframe attribute was causing problems
and we cannot rely on content authors to know to set width=100%

--- a/libraries/libraries/static/scss/main.scss
+++ b/libraries/libraries/static/scss/main.scss
@@ -13,6 +13,7 @@
 @import 'utilities/respond';
 @import 'utilities/clearfix';
 @import 'utilities/text';
+@import 'bootstrap/responsive-embed';
 
 // Reset
 @import 'reset/reset';
