--- a/libraries/libraries/static/scss/main.scss
+++ b/libraries/libraries/static/scss/main.scss
@@ -13,6 +13,8 @@
 @import 'utilities/respond';
 @import 'utilities/clearfix';
 @import 'utilities/text';
+@import 'bootstrap/variables';
+@import 'bootstrap/code'; // depends on vars above
 @import 'bootstrap/responsive-embed';
 
 // Reset
