--- a/libraries/staff/templates/staff/staff_list_page.html
+++ b/libraries/staff/templates/staff/staff_list_page.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load wagtailcore_tags %}
 
-{% block body_clasststs %}page--about-us{% endblock %}
+{% block body_class %}page--about-us{% endblock %}
 
 {% block content %}
     <div class="wrapper wrapper--padding-top">
