--- a/libraries/categories/templates/categories/about_us_page.html
+++ b/libraries/categories/templates/categories/about_us_page.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load wagtailcore_tags wagtailimages_tags %}
 
+{% block schema_org %}{% include 'categories/web_page_schema_org.html' %}{% endblock %}
+
 {% block body_class %}page--{{ page.category.slug }}{% endblock %}
 
 {% block content %}
