staff, home - add schema.org, ref #57
also slight edit to names of AboutUsPage, ServicePage in their schema.org

--- a/libraries/blog/templates/blog/blog_page.html
+++ b/libraries/blog/templates/blog/blog_page.html
@@ -11,7 +11,7 @@
 	    "@type": "WebPage",
 	    "@id": "{{ request.site.root_url }}{% pageurl page %}"
 	},
-	"name": "{{ page.title }}",
+	"name": "{{ page.title }} | CCA Libraries News",
 	"image": [ "{{ request.site.root_url }}{{ main_image.url }}" ],
 	"author": {
 		"@type": "Person",
