--- a/libraries/categories/templates/categories/web_page_schema_org.html
+++ b/libraries/categories/templates/categories/web_page_schema_org.html
@@ -7,7 +7,7 @@
     "@context": "http://schema.org/",
     "@type": "WebPage",
     "@id": "{{ request.site.root_url }}{% pageurl page %}",
-	"name": "{{ page.title }}",
+	"name": "{{ page.title }} | CCA Libraries",
 	{% if page.main_image %}
 	"primaryImageOfPage": {
 		"@type": "ImageObject",
