--- a/libraries/home/templates/home/home_page.html
+++ b/libraries/home/templates/home/home_page.html
@@ -1,4 +1,41 @@
 {% extends "base.html" %}
+{% load libraries_tags wagtailcore_tags wagtailimages_tags %}
+
+{% block schema_org %}
+{% image page.main_image original as main_image %}
+<script type="application/ld+json">
+{
+    "@context": "http://schema.org/",
+    "@type": "WebPage",
+    "@id": "{{ request.site.root_url }}",
+	"name": "CCA Libraries Home Page",
+	"primaryImageOfPage": {
+		"@type": "ImageObject",
+		"height": {{ main_image.height }},
+		"url": "{{ request.site.root_url }}{{ main_image.url }}",
+		"width": {{ main_image.width }}
+	},
+	"datePublished": "{{ page.first_published_at|date:"c" }}",
+	"dateModified": "{{ page.last_published_at|date:"c" }}",
+    "description": "{{ page.search_description }}",
+	"license": "https://creativecommons.org/licenses/by/4.0/",
+    "mainEntityOfPage": {
+		"@type": "Organization",
+		"name": "California College of the Arts Libraries"
+	},
+	"publisher": {
+		"@type": "Organization",
+		"name": "California College of the Arts Libraries",
+		"logo": {
+			"@type": "ImageObject",
+			"height": 140,
+			"url": "https://libraries.cca.edu/static/images/logo.png",
+			"width": 1000
+		}
+	}
+}
+</script>
+{% endblock %}
 
 {% block body_class %}home{% endblock %}
 
