schema.org use more-specific "Library" @type attr
instead of "Organization"

--- a/libraries/categories/templates/categories/web_page_schema_org.html
+++ b/libraries/categories/templates/categories/web_page_schema_org.html
@@ -29,7 +29,7 @@
     {% endif %}
 	"license": "https://creativecommons.org/licenses/by/4.0/",
 	"publisher": {
-		"@type": "Organization",
+		"@type": "Library",
 		"name": "California College of the Arts Libraries",
 		"logo": {
 			"@type": "ImageObject",
