--- a/libraries/home/templates/home/home_page.html
+++ b/libraries/home/templates/home/home_page.html
@@ -20,11 +20,11 @@
     "description": "{{ page.search_description }}",
 	"license": "https://creativecommons.org/licenses/by/4.0/",
     "mainEntityOfPage": {
-		"@type": "Organization",
+		"@type": "Library",
 		"name": "California College of the Arts Libraries"
 	},
 	"publisher": {
-		"@type": "Organization",
+		"@type": "Library",
 		"name": "California College of the Arts Libraries",
 		"logo": {
 			"@type": "ImageObject",
