--- a/libraries/staff/templates/staff/staff_list_page.html
+++ b/libraries/staff/templates/staff/staff_list_page.html
@@ -20,7 +20,7 @@
     "description": "{{ page.search_description }}",
 	"license": "https://creativecommons.org/licenses/by/4.0/",
 	"publisher": {
-		"@type": "Organization",
+		"@type": "Library",
 		"name": "California College of the Arts Libraries",
 		"logo": {
 			"@type": "ImageObject",
