--- a/libraries/staff/templates/staff/staff_member_schema_org.html
+++ b/libraries/staff/templates/staff/staff_member_schema_org.html
@@ -10,7 +10,7 @@
     "jobTitle": "{{ person.position }}",
     "description": "{{ person.bio|striptags }}",
     "worksFor": {
-        "@type": "Organization",
+        "@type": "Library",
         "name": "California College of the Arts Libraries",
         "logo": {
             "@type": "ImageObject",
