--- a/libraries/blog/templates/blog/blog_page.html
+++ b/libraries/blog/templates/blog/blog_page.html
@@ -28,7 +28,7 @@
     "headline": "{{ page.search_description }}",
 	"license": "https://creativecommons.org/licenses/by/4.0/",
 	"publisher": {
-		"@type": "Organization",
+		"@type": "Library",
 		"name": "California College of the Arts Libraries",
 		"logo": {
 			"@type": "ImageObject",
