--- a/libraries/exhibitions/templates/exhibits-base.html
+++ b/libraries/exhibitions/templates/exhibits-base.html
@@ -1,5 +1,5 @@
-{% load static wagtailuserbar %}
-
+{% load wagtailuserbar %}
+{% spaceless %}
 {% comment %}
 based substantially off of libraries/templates/base.html
 but must necessarily differ e.g. with the main CSS file
@@ -8,43 +8,8 @@ but must necessarily differ e.g. with the main CSS file
 <!DOCTYPE html>
 <html class="no-js" lang="en">
     <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>
-            {% block title %}
-                {% if self.seo_title %}{{ self.seo_title }}{% else %}{{ self.title }}{% endif %}
-            {% endblock %}
-            {% block title_suffix %}| CCA Libraries{% endblock %}
-        </title>
-        {% if self.search_description %}
-            <meta name="description" content="{{self.search_description}}" />
-            <meta property="og:description" content="{{self.search_description}}"/>
-        {% endif %}
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-        {# social sharing <meta> tags #}
-        {% block social %}
-            {% if self.seo_title %}
-                <meta property="og:title" content="{{ self.seo_title }} | CCA Libraries" />
-            {% else %}
-                <meta property="og:title" content="{{ self.title }} | CCA Libraries" />
-            {% endif %}
-            <meta property="og:type" content="article" />
-            <meta property="og:url" content="{{ request.build_absolute_uri }}" />
-            {% if self.specific.main_image %}
-                <meta property="og:image" content="https://{{ request.META.HTTP_HOST  }}{{ self.specific.main_image.file.url }}" />
-            {% endif %}
-            <meta property="og:site_name" content="CCA Libraries" />
-        {% endblock %}
-
-        {# Exhibits stylesheet #}
-        <link rel="stylesheet" type="text/css" href="{% static 'css/exhibits.css' %}">
-
-        <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
-
-        {% block extra_css %}
-            {# Override this in templates to add extra stylesheets #}
-        {% endblock %}
+        {% include 'components/head.html' %}
+        {% block schema_org %}{% endblock %}
     </head>
 
     <body class="page js-page {% block body_class %}{% endblock %}">
@@ -69,3 +34,4 @@ but must necessarily differ e.g. with the main CSS file
         {% block extra_js %}{% endblock %}
     </body>
 </html>
+{% endspaceless %}
