hours - add basic schema.org data, ref #57

--- a/libraries/hours/templates/hours/hours_page.html
+++ b/libraries/hours/templates/hours/hours_page.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load wagtailcore_tags %}
+{% load wagtailcore_tags wagtailimages_tags %}
 
 {% block content %}
 <div class="wrapper wrapper--padding-top" style="max-width: 840px">
@@ -78,4 +78,33 @@
     </div>
 
 </div>
+{% endblock %}
+
+{% block schema_org %}
+<script type="application/ld+json">
+{
+    "@context": "http://schema.org/",
+    "@type": "WebPage",
+    "@id": "{{ request.site.root_url }}{% pageurl page %}",
+	"name": "{{ page.title }} | CCA Libraries",
+	{% if page.main_image %}
+    {% image page.main_image original as main_image %}
+	"primaryImageOfPage": {
+		"@type": "ImageObject",
+		"height": {{ main_image.height }},
+		"url": "{{ request.site.root_url }}{{ main_image.url }}",
+		"width": {{ main_image.width }}
+	},
+	{% endif %}
+	"datePublished": "{{ page.first_published_at|date:"c" }}",
+	"dateModified": "{{ page.last_published_at|date:"c" }}",
+    "description": "{{ page.search_description }}",
+	"license": "https://creativecommons.org/licenses/by/4.0/",
+	"publisher": {
+		"@type": "Library",
+        "@id": "{{ request.site.root_url }}",
+		"name": "California College of the Arts Libraries"
+	}
+}
+</script>
 {% endblock %}
