simpler schema.org 'publisher' fields, ref #57

--- a/libraries/categories/templates/categories/web_page_schema_org.html
+++ b/libraries/categories/templates/categories/web_page_schema_org.html
@@ -28,15 +28,10 @@
     "description": "{{ page.search_description }}",
     {% endif %}
 	"license": "https://creativecommons.org/licenses/by/4.0/",
-	"publisher": {
+    "publisher": {
 		"@type": "Library",
-		"name": "California College of the Arts Libraries",
-		"logo": {
-			"@type": "ImageObject",
-			"height": 140,
-			"url": "https://libraries.cca.edu/static/images/logo.png",
-			"width": 1000
-		}
+        "@id": "{{ request.site.root_url }}",
+		"name": "California College of the Arts Libraries"
 	}
 }
 </script>
