exhib - add schema.org, closes #57
add note about eventually doing openingHours too

--- a/libraries/blog/templates/blog/blog_page.html
+++ b/libraries/blog/templates/blog/blog_page.html
@@ -21,7 +21,7 @@
 	"dateModified": "{{ page.last_published_at|date:"c" }}",
     {% if page.body %}
         {# this is a streamfield #}
-        "description": "{{ page.body|striptags|condense_whitespace|truncatewords_html:200 }}",
+        "description": "{{ page.body|striptags|condense_whitespace|truncatewords:200 }}",
     {% else %}
         "description": "{{ page.search_description }}",
     {% endif %}
