--- a/libraries/hours/templates/hours/hours_page.html
+++ b/libraries/hours/templates/hours/hours_page.html
@@ -99,6 +99,7 @@
 	"datePublished": "{{ page.first_published_at|date:"c" }}",
 	"dateModified": "{{ page.last_published_at|date:"c" }}",
     "description": "{{ page.search_description }}",
+    {# @TODO would like to add openingHours https://schema.org/openingHours #}
 	"license": "https://creativecommons.org/licenses/by/4.0/",
 	"publisher": {
 		"@type": "Library",
