schema.org - wants image, telephone, address every time library is used as a reference

--- a/libraries/exhibitions/templates/exhibitions/exhibits_index_page.html
+++ b/libraries/exhibitions/templates/exhibitions/exhibits_index_page.html
@@ -50,6 +50,23 @@
 		"@type": "Library",
         "@id": "{{ request.site.root_url }}",
 		"name": "California College of the Arts Libraries",
+        "address": [
+            {
+                "@type": "PostalAddress",
+                "addressLocality": "Oakland",
+                "addressRegion": "CA",
+                "streetAddress": "5212 Broadway",
+                "postalCode": "94618",
+                "telephone": "510-594-3658"
+            }, {
+                "@type": "PostalAddress",
+                "addressLocality": "San Francisco",
+                "addressRegion": "CA",
+                "streetAddress": "1111 8th St",
+                "postalCode": "94107",
+                "telephone": "415-703-9574"
+            }
+        ],
         "image": {
 			"@type": "ImageObject",
 			"height": 140,
