edits to schema.org data everywhere
- remove <script> tags that can be in page.body
- use `escapejs` filter everywhere so that quotes in text don't break JSON

--- a/libraries/blog/templates/blog/blog_page.html
+++ b/libraries/blog/templates/blog/blog_page.html
@@ -11,21 +11,21 @@
 	    "@type": "WebPage",
 	    "@id": "{{ request.site.root_url }}{% pageurl page %}"
 	},
-	"name": "{{ page.title }} | CCA Libraries News",
+	"name": "{{ page.title|escapejs }} | CCA Libraries News",
 	"image": [ "{{ request.site.root_url }}{{ main_image.url }}" ],
 	"author": {
 		"@type": "Person",
-		"name": "{{ page.owner.first_name }} {{ page.owner.last_name }}"
+		"name": "{{ page.owner.first_name|escapejs }} {{ page.owner.last_name|escapejs }}"
 	},
 	"datePublished": "{{ page.first_published_at|date:"c" }}",
 	"dateModified": "{{ page.last_published_at|date:"c" }}",
     {% if page.body %}
         {# this is a streamfield #}
-        "description": "{{ page.body|striptags|condense_whitespace|truncatewords:200 }}",
+        "description": "{{ page.body|stripjs|striptags|condense_whitespace|escapejs|truncatewords:200 }}",
     {% else %}
-        "description": "{{ page.search_description }}",
+        "description": "{{ page.search_description|escapejs }}",
     {% endif %}
-    "headline": "{{ page.search_description }}",
+    "headline": "{{ page.search_description|escapejs }}",
 	"license": "https://creativecommons.org/licenses/by/4.0/",
     "publisher": {
 		"@type": "Library",
