--- a/libraries/staff/templates/staff/staff_list_page.html
+++ b/libraries/staff/templates/staff/staff_list_page.html
@@ -19,7 +19,7 @@
     {% endif %}
 	"datePublished": "{{ page.first_published_at|date:"c" }}",
 	"dateModified": "{{ page.last_published_at|date:"c" }}",
-    "description": "{{ page.search_description }}",
+    "description": "{{ page.search_description|escapejs }}",
 	"license": "https://creativecommons.org/licenses/by/4.0/",
     "publisher": {
 		"@type": "Library",
