--- a/libraries/hours/templates/hours/hours_page.html
+++ b/libraries/hours/templates/hours/hours_page.html
@@ -86,7 +86,7 @@
     "@context": "http://schema.org/",
     "@type": "WebPage",
     "@id": "{{ request.site.root_url }}{% pageurl page %}",
-	"name": "{{ page.title }} | CCA Libraries",
+	"name": "{{ page.title|escapejs }} | CCA Libraries",
 	{% if page.main_image %}
     {% image page.main_image original as main_image %}
 	"primaryImageOfPage": {
@@ -98,13 +98,19 @@
 	{% endif %}
 	"datePublished": "{{ page.first_published_at|date:"c" }}",
 	"dateModified": "{{ page.last_published_at|date:"c" }}",
-    "description": "{{ page.search_description }}",
+    "description": "{{ page.search_description|escapejs }}",
     {# @TODO would like to add openingHours https://schema.org/openingHours #}
 	"license": "https://creativecommons.org/licenses/by/4.0/",
 	"publisher": {
 		"@type": "Library",
         "@id": "{{ request.site.root_url }}",
-		"name": "California College of the Arts Libraries"
+		"name": "California College of the Arts Libraries",
+        "image": {
+			"@type": "ImageObject",
+			"height": 140,
+			"url": "{% static 'images/logo.png' %}",
+			"width": 1000
+		}
 	}
 }
 </script>
