blog - need to load static tag

--- a/libraries/blog/templates/blog/blog_page.html
+++ b/libraries/blog/templates/blog/blog_page.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load libraries_tags wagtailcore_tags wagtailimages_tags %}
+{% load static libraries_tags wagtailcore_tags wagtailimages_tags %}
 
 {% block schema_org %}
 {% image page.main_image original as main_image %}
