--- a/libraries/staff/templates/staff/staff_list_page.html
+++ b/libraries/staff/templates/staff/staff_list_page.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load libraries_tags wagtailcore_tags wagtailimages_tags %}
+{% load static libraries_tags wagtailcore_tags wagtailimages_tags %}
 
 {% block schema_org %}
 <script type="application/ld+json">
