--- a/libraries/staff/templates/staff/staff_member_schema_org.html
+++ b/libraries/staff/templates/staff/staff_member_schema_org.html
@@ -1,4 +1,4 @@
-{% load wagtailcore_tags %}
+{% load static wagtailcore_tags %}
 <script type="application/ld+json">
 {
     "@context": "http://schema.org/",
