--- a/libraries/libraries/static/scss/components/home/_home-news-item.scss
+++ b/libraries/libraries/static/scss/components/home/_home-news-item.scss
@@ -112,9 +112,11 @@
 .home-news-item__text {
     font-family: $font-family-serif;
     font-size: 13px;
-    // fixes layout bugs when text includes long words e.g. URLs
+    // hyphens & word-break together fix layout bug
+    // stops long text (e.g. a URL) from ballooning the size of element
     hyphens: auto;
     line-height: 1.4em;
+    word-break: break-word;
 
     @include respond($break-medium) {
         font-size: 14px;
